--- a/梧桐杯/2025/数据赛道/Readme
+++ b/梧桐杯/2025/数据赛道/Readme
@@ -1,3 +1,5 @@
-由于不同age和总体标签分布不平衡，这里采用双层样本加权：
-1、不同age上的label加权
-2、总体上的label加权
+由于不同age和总体标签分布不平衡，baseline采用双层样本加权的方法。
+
+后期上分点：
+1、特征构造（最好针对age小于30的样本）
+2、模型融合
