--- a/梧桐杯/2025/数据赛道/Readme
+++ b/梧桐杯/2025/数据赛道/Readme
@@ -1,5 +1,6 @@
-由于不同age和总体标签分布不平衡，baseline采用双层样本加权的方法。
+由于不同age和总体标签分布不平衡，所以采用双层样本加权的方法。(baseline仅供参考，切勿完全抄袭，避免违规行为！)
 
 后期上分点：
 1、特征构造（最好针对age小于30的样本）
 2、模型融合
+3、后处理
